# routinetracker

./: .gitignore  AGENTS.md  ENGINEERING_BACKLOG.md  FASTTRACK_PLAN.md  GITHUB_COPY.md  MACOS_BUILD.md  README.md  REDESIGN_ROADMAP.md  REFACTORING_SPEC.md  RELEASE_NOTES.md  ROADMAP.md  SPECIFICATION.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: macos-build.yml
browser-extension/: README.md  background.js  manifest.json
orchestrator/: ORCHESTRATOR_SPEC.md  README.md  набросок оркестратора.txt
scripts/: check-mojibake.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autostart.rs  browser_bridge.rs  database.rs  lib.rs  messages.rs  ollama.rs  tracker.rs
src/components/app/: AppShell.tsx  StateCard.tsx  StatusLine.tsx
src/components/dashboard/: DayTimeline.tsx  FlowCard.tsx  FocusDonut.tsx  Heatmap.tsx  LlmPrepCard.tsx  MetricCard.tsx  WeekTimeline.tsx
src/data/: mock.ts
src/lib/: activity-analytics.ts  context-taxonomy.ts  focusflow-api.ts  llm-summary.ts  settings-contract.ts  tauri-api.ts
src/lib/copy/: errors.ts  ru.ts
src/lib/llm/: prompts.ts
src/pages/: AnalyticsPage.tsx  HistoryPage.tsx  SettingsPage.tsx  TodayPage.tsx
